# esp32-cmake

./: LICENSE  README.md
cmake/: toolchain.ESP32.cmake  toolchain.arduino.ESP32.cmake
sdk/: CMakeLists.txt  esp-idf-2.0.0.cmake  esp-idf-arduino.2.0.0.cmake
